# eventiq

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: default.yml
docs/: DESIGN.md  PRD.md  RESEARCH.md  SIGMA-RULES.md  SPEC.md
docs/report/: eventiq-report.tex
review-logs/: Benign_Baseline_Traffic.csv  DNS Tunneling Detection Test case 5.csv  Password Spray Detection Test Case 4.csv  Port scan detection Test case 3.csv  SingleSource_SSH_BruteForce_TestCase2.csv  TC3_DNS_Tunneling.csv  TC3_DNS_Tunneling_50Logs.csv  TC6_MultiStage_Attack_100Logs.csv  TC7_MultiHost_LateralMovement.csv  TC8_MultipleIPs_SingleUser_50Logs.csv  TC9_SystemEvents_50Logs.csv
src/eventiq/: __init__.py  cli.py  config.py  correlate.py  engine.py  model.py  overview.py  report.py  risk.py  server.py  validate.py  windows.py
src/eventiq/detectors/: __init__.py  brute_force.py  c2_port.py  classic_brute_force.py  classic_port_scan.py  dns_tunnel.py  lateral_movement.py  password_spray.py  port_scan.py  (+3 more)
tests/: conftest.py  test_no_label_leak.py
tests/integration/: test_end_to_end.py  test_server.py
tests/unit/: test_classic_detectors.py  test_config.py  test_csv_compat.py  test_detectors.py  test_dns_attribution.py  test_dns_entropy.py  test_export.py  test_label_audit.py  test_overview.py  test_render.py  test_render_contract.py  test_report.py  test_risk_correlate.py  test_sigma_commands.py  test_windows.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  Charts.tsx  main.tsx  report.ts  theme.css  ui.test.tsx  ui.tsx
(+28 files in other folders)
