[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "eventiq"
version = "0.1.0"
description = "Streaming detection engine for network security logs (SOC Project 1)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
polars = ["polars>=1.0"]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.100",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/MuhammadIsmail009/eventiq"
Repository = "https://github.com/MuhammadIsmail009/eventiq"

[project.scripts]
eventiq = "eventiq.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
eventiq = ["render/templates/*.j2", "web/*"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]

[tool.ruff.lint.per-file-ignores]
# Embedded markup/regex payloads; line length is content, not code style.
"src/eventiq/export/wazuh_xml.py" = ["E501"]
"src/eventiq/server.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
files = ["src"]

[[tool.mypy.overrides]]
module = ["polars"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
